# LDGM

./: .gitattributes  .gitignore  .vsconfig  CMakeLists.txt  Launch_LDGM_Beta.bat  README.md  RECOVERY_NOTES.md  SOURCE_SHARE.md  dependencies.lock.json  development_plan.md  export.bat  export.sh  legally_distinct_gorka_morka_prd_eng_spec_v0_4.md  project.json  validation_report.txt
Gem/: CMakeLists.txt  gem.json  ldgm_files.cmake  ldgm_shared_files.cmake
Gem/Registry/: assetprocessor_settings.setreg
Gem/Source/: LDGMModule.cpp  LDGMSystemComponent.cpp  LDGMSystemComponent.h
Gems/LDMChronoVehicle/: CMakeLists.txt  gem.json
Registry/: runtime_bootstrap.setreg
ShaderLib/: README.md  scenesrg.srgi  viewsrg.srgi
audio_dev/: audio_research.md
cmake/: Directory.Build.targets  EngineFinder.cmake
docs/: IMPLEMENTATION_STATUS.md
scripts/: bootstrap-dependencies.ps1  bootstrap-machine.ps1  build-chrono.ps1  build-project.ps1  common.ps1  configure-project.ps1  launch-beta.ps1  launch-with-rhi.ps1  preflight.ps1  process-assets.ps1  test-chrono.ps1  test-launchers.ps1  test-vehicle-gem.ps1
test_goals/: README.md  manifest.json  t0_integration_spike.json  t1_driving_prototype.json  t2_combat_damage.json  t3_vertical_slice.json  t4_persistent_level_one.json  t5_authoritative_multiplayer.json  t6_contested_zone_alpha.json  t7_scale_release_candidate.json  t8_level_two_expansion.json  test_goal.schema.json
tests/chrono_smoke/: CMakeLists.txt  main.cpp
tools/: evaluate_t0_gate.py  recovered_original_package_generator.py  validate_test_goals.py
(+70 files in other folders)
